--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "serve-favicon": "^2.5.0"
   },
   "scripts": {
+    "install-and-build": "npm install && npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
